[project]
name = "geocoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.11.18",
    "requests==2.32.3",
    "pydantic==2.11.3",
    "pdap-access-manager==0.1.10",
    "discord-poster==0.1.0",
    "environs>=14.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
